Fix merge error that made the Open Folder Window menu item appear in
2007-12-05  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-directory-view.c:
	Fix merge error that made the Open Folder Window
	menu item appear in non-browser mode



svn path=/trunk/; revision=13494

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-05  Alexander Larsson  <alexl@redhat.com>
+
+        * src/file-manager/fm-directory-view.c:
+	Fix merge error that made the Open Folder Window
+	menu item appear in non-browser mode
+
 2007-12-04 Kevin Kubasik <kevin@kubasik.net>
 	* libnautilus-private/nautilus-search-engine-beagle.c:
 	Fixed some spacing issues.
