--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-05  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.[ch]:
+	Implement duplicate.
+
+2007-12-05  Alexander Larsson  <alexl@redhat.com>
+
         * src/file-manager/fm-directory-view.c:
 	Fix merge error that made the Open Folder Window
 	menu item appear in non-browser mode
