--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-06  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+	Set position on move and link
+
+2007-12-06  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.[ch]:
         * src/file-manager/fm-directory-view.c:
 	Implement symlinking
