Make it pass msgfmt
svn path=/trunk/; revision=13501

--- a/po/nb.po
+++ b/po/nb.po
@@ -5820,7 +5820,7 @@ msgstr "Tilgang ble nektet."
 #: ../src/nautilus-window-manage-views.c:1627
 #, c-format
 msgid "Couldn't display \"%s\", because the host could be found."
-msgstr "Kunne ikke vise «%s» fordi verten «%s» ikke ble funnet."
+msgstr "Kunne ikke vise «%s» fordi verten ikke ble funnet."
 
 #: ../src/nautilus-window-manage-views.c:1629
 msgid ""
