Implement the rest of the file create ops
2007-12-07  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
	Implement the rest of the file create ops
	
        * src/file-manager/fm-directory-view.c:
	Get sane filenames for dropped text


svn path=/trunk/; revision=13502

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-07  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.[ch]:
+	Implement the rest of the file create ops
+	
+        * src/file-manager/fm-directory-view.c:
+	Get sane filenames for dropped text
+
 2007-12-06  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-directory.c:
