Show errors on unmount/eject failing.
2007-12-07  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
        * src/file-manager/fm-tree-view.c:
        * src/nautilus-places-sidebar.c:
	Show errors on unmount/eject failing.


svn path=/trunk/; revision=13504

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2007-12-07  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file-operations.[ch]:
+        * src/file-manager/fm-tree-view.c:
+        * src/nautilus-places-sidebar.c:
+	Show errors on unmount/eject failing.
+
+2007-12-07  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.[ch]:
         * src/nautilus-places-sidebar.c:
 	Implement empty trash on unmount and eject
 	
