Display errors on mount/unmount failure
2007-12-07  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-places-sidebar.c:
	Display errors on mount/unmount failure


svn path=/trunk/; revision=13505

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-07  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-places-sidebar.c:
+	Display errors on mount/unmount failure
+
+2007-12-07  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.[ch]:
         * src/file-manager/fm-tree-view.c:
         * src/nautilus-places-sidebar.c:
