Implement nautilus_file_set_permissions_recursive
2007-12-07  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        Implement nautilus_file_set_permissions_recursive


svn path=/trunk/; revision=13508

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-07  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        Implement nautilus_file_set_permissions_recursive
+
+2007-12-07  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file.c (nautilus_file_is_in_desktop):
 	Use new gio apis to avoid getting uri.
 
