Added Marathi translations
svn path=/trunk/; revision=13517

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-11 Rahul Balerao <b.rahul.pm@gmail.com>
+	
+	* mr.po: Added Marathi translations given by Sandeep Shedmake
+	* LINGUAS: Added an entry for mr.
+
 2007-12-11  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated Greek translation
