Fix build error from nautilus metafile removal.
2007-12-11  A. Walton  <awalton@svn.gnome.org>
	* src/nautilus-shell-interface.idl:
	Fix build error from nautilus metafile removal.

svn path=/trunk/; revision=13518

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-11  A. Walton  <awalton@svn.gnome.org>
+	* src/nautilus-shell-interface.idl:
+	Fix build error from nautilus metafile removal.
+
 2007-12-10  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-directory-async.c:
