--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,55 @@
+2007-12-11  David Zeuthen  <davidz@redhat.com>
+
+	Update for API changes in gio trunk.
+
+	* libnautilus-private/nautilus-desktop-icon-file.c:
+	(update_info_from_link):
+	* libnautilus-private/nautilus-desktop-link-monitor.c:
+	(volume_delete_dialog), (volume_file_name_used),
+	(create_mount_link), (mount_added_callback),
+	(mount_removed_callback), (mount_changed_callback),
+	(desktop_volumes_visible_changed),
+	(nautilus_desktop_link_monitor_init),
+	(desktop_link_monitor_finalize):
+	* libnautilus-private/nautilus-desktop-link.c:
+	(nautilus_desktop_link_new),
+	(nautilus_desktop_link_new_from_mount),
+	(nautilus_desktop_link_get_mount), (desktop_link_finalize):
+	* libnautilus-private/nautilus-desktop-link.h:
+	* libnautilus-private/nautilus-file-operations.c:
+	(custom_mount_to_string), (custom_mount_skip),
+	(unmount_mount_callback), (do_unmount), (get_trash_dirs_for_mount),
+	(has_trash_files), (nautilus_file_operations_unmount_mount):
+	* libnautilus-private/nautilus-file-operations.h:
+	* libnautilus-private/nautilus-file.c:
+	(nautilus_file_get_volume_name):
+	* src/file-manager/fm-icon-container.c: (get_sort_category):
+	* src/file-manager/fm-tree-model.c: (fm_tree_model_add_root_uri),
+	(fm_tree_model_get_mount_for_root_node_file),
+	(fm_tree_model_remove_root_uri):
+	* src/file-manager/fm-tree-model.h:
+	* src/file-manager/fm-tree-view.c: (add_root_for_mount),
+	(mount_added_callback), (mount_removed_callback),
+	(button_pressed_callback), (fm_tree_view_unmount_cb),
+	(create_tree):
+	* src/nautilus-application.c: (nautilus_application_instance_init),
+	(mount_added_callback), (mount_removed_callback):
+	* src/nautilus-pathbar.c:
+	(nautilus_path_bar_update_button_appearance),
+	(is_file_path_mounted_mount), (find_button_type),
+	(make_directory_button):
+	* src/nautilus-places-sidebar.c: (add_place), (update_places),
+	(mount_added_callback), (mount_removed_callback),
+	(mount_changed_callback), (volume_added_callback),
+	(volume_removed_callback), (volume_changed_callback),
+	(drive_changed_callback), (bookmarks_popup_menu_detach_cb),
+	(check_visibility), (bookmarks_check_popup_sensitivity),
+	(volume_mount_cb), (open_selected_bookmark), (mount_shortcut_cb),
+	(unmount_shortcut_cb), (eject_shortcut_cb),
+	(drive_poll_for_media_cb), (rescan_shortcut_cb),
+	(bookmarks_build_popup_menu), (nautilus_places_sidebar_init),
+	(nautilus_places_sidebar_set_parent_window):
+
 2007-12-11  A. Walton  <awalton@svn.gnome.org>
 	* src/nautilus-shell-interface.idl:
 	Fix build error from nautilus metafile removal.
