fix a typo (bug #499715, committing on behalf of Bob mauchin); add two
2007-12-12  Andre Klapper  <a9016009@gmx.de>

	* src/file-manager/fm-properties-window.c (create_pie_widget):
	fix a typo (bug #499715, committing on behalf of Bob mauchin); 
	add two translator comments.


svn path=/trunk/; revision=13521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-12  Andre Klapper  <a9016009@gmx.de>
+
+	* src/file-manager/fm-properties-window.c (create_pie_widget):
+	fix a typo (bug #499715, committing on behalf of Bob mauchin); 
+	add two translator comments.
+
 2007-12-11  David Zeuthen  <davidz@redhat.com>
 
 	Update for API changes in gio trunk.
