fix a typo (bug #330324, committing on behalf of Jon Dufresne).
2007-12-12  Andre Klapper  <a9016009@gmx.de>

	* libnautilus-private/apps_nautilus_preferences.schemas.in:
	fix a typo (bug #330324, committing on behalf of Jon Dufresne).


svn path=/trunk/; revision=13522

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-12  Andre Klapper  <a9016009@gmx.de>
 
+	* libnautilus-private/apps_nautilus_preferences.schemas.in:
+	fix a typo (bug #330324, committing on behalf of Jon Dufresne).
+
+2007-12-12  Andre Klapper  <a9016009@gmx.de>
+
 	* src/file-manager/fm-properties-window.c (create_pie_widget):
 	fix a typo (bug #499715, committing on behalf of Bob mauchin); 
 	add two translator comments.
