--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-12  ahmad riza h nst  <rizahnst@gnome.org>
+
+	* id.po: Updated.
+
 2007-09-16  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
