Update to new gio attribute names
2007-12-12  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
        * libnautilus-private/nautilus-file-utilities.c:
	Update to new gio attribute names


svn path=/trunk/; revision=13524

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-12  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-private.h:
+        * libnautilus-private/nautilus-file-utilities.c:
+	Update to new gio attribute names
+
 2007-12-12  Andre Klapper  <a9016009@gmx.de>
 
 	* libnautilus-private/apps_nautilus_preferences.schemas.in:
