Update for g_mount_for_location to g_file_mount_enclosing_volume change.
2007-12-13  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
        * src/nautilus-window-manage-views.c:
	Update for g_mount_for_location to g_file_mount_enclosing_volume change.


svn path=/trunk/; revision=13527

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-13  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-mime-actions.c:
+        * src/nautilus-window-manage-views.c:
+	Update for g_mount_for_location to g_file_mount_enclosing_volume change.
+
 2007-12-12  Alexander Larsson  <alexl@redhat.com>
 
         * src/file-manager/fm-directory-view.c:
