Update to gioscheduler.h changes
2007-12-14  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
	Update to gioscheduler.h changes


svn path=/trunk/; revision=13528

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-14  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Update to gioscheduler.h changes
+
 2007-12-13  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-mime-actions.c:
