Update to new flags API
2007-12-14  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-monitor.c:
        * libnautilus-private/nautilus-open-with-dialog.c:
	Update to new flags API


svn path=/trunk/; revision=13530

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-12-14  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-monitor.c:
+        * libnautilus-private/nautilus-open-with-dialog.c:
+	Update to new flags API
+
+2007-12-14  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-bookmark.c:
         * libnautilus-private/nautilus-bookmark.h:
         * libnautilus-private/nautilus-desktop-icon-file.c:
