--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-12-17  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-main.c:
+        (setup_debug_log_signals):
+	Disable unsafe segv handler by default
+
 2007-12-14  David Zeuthen  <davidz@redhat.com>
 
 	* libnautilus-private/nautilus-desktop-icon-file.c:
