Update for glib API change.
2007-12-19  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
	Update for glib API change.


svn path=/trunk/; revision=13536

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-12-19  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-file.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+	Update for glib API change.
+
 2007-12-19  David Zeuthen  <davidz@redhat.com>
 
 	Don't put up error dialogs if the error code is
