Update to new gio file attribute names
2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-customization-data.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-dnd.c:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-link.c:
        * libnautilus-private/nautilus-search-engine-simple.c:
        * libnautilus-private/nautilus-trash-monitor.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c:
        * src/nautilus-pathbar.c:
        * src/nautilus-property-browser.c:
	Update to new gio file attribute names


svn path=/trunk/; revision=13538

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-customization-data.c:
+        * libnautilus-private/nautilus-directory-async.c:
+        * libnautilus-private/nautilus-dnd.c:
+        * libnautilus-private/nautilus-file-operations.c:
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-icon-dnd.c:
+        * libnautilus-private/nautilus-link.c:
+        * libnautilus-private/nautilus-search-engine-simple.c:
+        * libnautilus-private/nautilus-trash-monitor.c:
+        * src/file-manager/fm-directory-view.c:
+        * src/file-manager/fm-properties-window.c:
+        * src/nautilus-pathbar.c:
+        * src/nautilus-property-browser.c:
+	Update to new gio file attribute names
+
+2007-12-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-operations.c:
         * src/nautilus-places-sidebar.c:
 	Update to new gio api
