Missed one "std" in the conversion
2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-private.h:
	Missed one "std" in the conversion


svn path=/trunk/; revision=13539

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-file-private.h:
+	Missed one "std" in the conversion
+
+2007-12-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-customization-data.c:
         * libnautilus-private/nautilus-directory-async.c:
         * libnautilus-private/nautilus-dnd.c:
