Correct check for require_uri. Small performance fix
2007-12-20  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-mime-actions.c:
	Correct check for require_uri.
	Small performance fix



svn path=/trunk/; revision=13540

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
+        * libnautilus-private/nautilus-mime-actions.c:
+	Correct check for require_uri.
+	Small performance fix
+
+2007-12-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file-private.h:
 	Missed one "std" in the conversion
 
