--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-file.c (nautilus_self_check_file):
+	Fix old test
+
+	* NEWS: 
+	Update for release
+
+	* configure.in:
+	Remove gnome-vfs requirement
+	Bump glib and eel requirements
+	
+2007-12-20  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-mime-actions.c:
 	Correct check for require_uri.
 	Small performance fix
