--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.21.1 are:
+* Totally replaced gnome-vfs use with gio
+* New implementation of file operations like copy/move with
+  a shared progress dialog
+* Lots of cleanup  
+
 Major changes in 2.20.0 are:
 * Load thumbnails asynchronously
 * Support direct save DnD (XDS)
