--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-20  Alexander Larsson  <alexl@redhat.com>
+
+	* POTFILES.in:
+	Remove removed files
+
 2007-12-17  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
