--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-12-22  Seán de Búrca  <sdeburca@svn.gnome.org>
+
+	* ga.po: Updated Irish translation.
+
 === nautilus 2.20.1 ===
 
 2007-12-20  Alexander Larsson  <alexl@redhat.com>
