Updated Irish translation. Add missing files.
2007-12-26  Seán de Búrca  <sdeburca@svn.gnome.org>

    * ga.po: Updated Irish translation.
    * POTFILES.in: Add missing files.

svn path=/trunk/; revision=13549

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-12-26  Seán de Búrca  <sdeburca@svn.gnome.org>
+
+	* ga.po: Updated Irish translation.
+	* POTFILES.in: Add missing files.
+
 2007-12-26  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Updated Arabic Translation by Djihed Afifi.
